fixed text overflow on PageOne

--- a/pageOne.html
+++ b/pageOne.html
@@ -62,14 +62,14 @@
 					</section>
 				</main>
 			</a>
-			<a class="banner" id="ban3" href="/pageOne.html">
+			<a class="ban" id="ban3" href="/pageOne.html">
 				<main>
 					<h3>Lorem</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorem aliquam atque. Quam repellat deserunt vero fugit libero? Accusantium velit esse itaque laborum. Iste cupiditate dignissimos, repellat totam dolor vel!</p>
 				</main>
 				
 			</a>
-			<a class="banner" id="ban4" href="/pageOne.html">
+			<a class="ban" id="ban4" href="/pageOne.html">
 				<main>
 					<h3>Lorem</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorem aliquam atque. Quam repellat deserunt vero fugit libero? Accusantium velit esse itaque laborum. Iste cupiditate dignissimos, repellat totam dolor vel!</p>
@@ -88,7 +88,7 @@
 				</main>
 
 			</a>
-			<a class="banner" id="ban7" href="/pageOne.html">
+			<a class="ban" id="ban7" href="/pageOne.html">
 				<main>
 					<h3>Lorem</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorem aliquam atque. Quam repellat deserunt vero fugit libero? Accusantium velit esse itaque laborum. Iste cupiditate dignissimos, repellat totam dolor vel!</p>
