--- a/pageOne.html
+++ b/pageOne.html
@@ -5,6 +5,10 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+		<meta name="description" content="Professional Business website built by ChrisThompsonDev.com - Chris Thompson: Web Developer and Software Engineer in Sylva, Waynesville and Western North Carolina (NC)">
+		<link rel="icon" href="/images/favicon.png">
+
 		<title>My Company - About</title>
 
 		<!-- external CSS link -->
